# SybaKiller

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: hft-stack.mdc  sovereign-hft-architecture.mdc
alpha-swarm/: README.md  pyproject.toml
alpha-swarm/alpha_swarm/: __init__.py  cli.py  output_schema.py  swarm.py
alpha-swarm/alpha_swarm/agents/: __init__.py  archivist.py  base.py  feature_miner.py  strategy_evolution.py  stress_test.py
alpha-swarm/tests/: test_output_schema.py
api/: main.py
docs/: ARCHITECTURE.md  SETUP.md  SOVEREIGN_ARCHITECTURE.md  UPGRADE.md
execution-engine/: Cargo.toml  README.md
execution-engine/config/: hdc_masks.example.json
execution-engine/src/: config.rs  main.rs
execution-engine/src/hdc/: mod.rs  simd.rs
execution-engine/src/net/: fix.rs  mod.rs  xdp.rs
execution-engine/src/pipeline/: mod.rs  spsc.rs
infra/prometheus/: prometheus.yml
scripts/: cursor-shell.sh  install-dev.sh  install-system.sh  run-stack.sh  setup-binance-env.sh  smoke-live.sh  verify-setup.sh  verify_binance.py
sybakiller/: __init__.py  bootstrap.py  config.py  engine.py  gateway.py  market_data.py  order_book.py  redis_ticks.py  risk.py  types.py
sybakiller/adapters/: __init__.py  base.py  rate_limit.py
sybakiller/exchanges/: __init__.py  binance.py  constants.py  factory.py  filters.py  paper.py
sybakiller/feeds/: __init__.py  binance.py  factory.py  simulated.py
sybakiller/state/: __init__.py  recovery.py  snapshot.py  store.py
sybakiller/strategy/: __init__.py  base.py  bus.py  router.py  signals.py
sybakiller/venues/: __init__.py  types.py
tests/: conftest.py  test_api.py  test_binance_feed.py  test_exchange_filters.py  test_gateway.py  test_order_book.py  test_rate_limit.py  test_risk.py  test_signal_bus.py  test_snapshot.py
