[project]
name = "sybakiller"
version = "0.1.0"
description = "Low-latency trading bot stack — ingest, book, risk, execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.11.0",
    "websockets>=14.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "redis[hiredis]>=5.2.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ipython>=8.29.0",
    "types-redis>=4.6.0",
]
backtest = [
    "jax[cpu]>=0.4.0",
    "matplotlib>=3.9.0",
    "pyarrow>=18.0.0",
]
data = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
]
all = [
    "sybakiller[dev,backtest,data]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["sybakiller", "api", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["B027", "SIM105"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
packages = ["sybakiller", "api"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.coverage.run]
source = ["sybakiller", "api"]
branch = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sybakiller", "api"]
