[project]
name = "alpha-swarm"
version = "0.1.0"
description = "Sovereign quant research swarm — mask generation for execution-engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "numpy>=2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
pcap = ["scapy>=2.5"]
dev = ["pytest>=8.3", "ruff>=0.8"]

[project.scripts]
alpha-swarm = "alpha_swarm.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alpha_swarm"]
