[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"
description = "Sovereign ultra-low-latency execution — AF_XDP, HDC, FIX"
rust-version = "1.75"

[features]
default = []
kernel-bypass = [] # enable when aya/xsk wired on target host
avx512 = []

[[bin]]
name = "execution-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rtrb = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[lints.rust]
unsafe_code = "warn"
